--- a/MainBit.Themes.csproj
+++ b/MainBit.Themes.csproj
@@ -69,8 +69,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
-    <Content Include="Scripts\Web.config" />
-    <Content Include="Styles\Web.config" />
     <Content Include="Properties\AssemblyInfo.cs" />
     <Content Include="Module.txt" />
   </ItemGroup>
@@ -93,12 +91,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\BaseUrlExtensions.cs" />
+    <Compile Include="Rules\ThemeRuleProvider.cs" />
     <Compile Include="Services\BaseUrlThemeSelectionRule.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
